--- a/contribute.html
+++ b/contribute.html
@@ -1,71 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="rw">
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Les NGANYIRA — Contribution</title>
+  <title data-i18n="title">Les NGANYIRA — Tanga umusanzu</title>
   <link rel="stylesheet" href="style.css"/>
+  <style>
+    .lang-select { padding:8px 10px; border-radius:8px; border:1px solid #d8deea; background:#fff; }
+    .grid { display:grid; gap:12px; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); }
+    .card { background:#fff; border:1px solid #eef1f7; border-radius:14px; padding:14px; }
+    .row { display:flex; gap:10px; flex-wrap:wrap; }
+    label { display:block; font-weight:600; margin-bottom:6px; }
+    input, select, textarea { width:100%; padding:10px; border:1px solid #d8deea; border-radius:10px; }
+    .muted small { color: var(--muted); }
+    .success { background:#ecfdf5; border:1px solid #bbf7d0; color:#065f46; padding:10px; border-radius:10px; display:none; }
+    table.simple { width:100%; border-collapse:collapse; }
+    table.simple th, table.simple td { padding:8px; border-bottom:1px solid #eef1f7; text-align:left; }
+    .btn { padding:10px 12px; border-radius:10px; background: var(--accent); color:#fff; text-decoration:none; font-weight:600; border:0; cursor:pointer; }
+    .btn.secondary { background:#eef3ff; color:#1f3fb3; }
+  </style>
 </head>
 <body>
   <!-- NAV -->
   <header class="nav">
-    <div class="nav-left">Les NGANYIRA</div>
+    <div class="nav-left" data-i18n="brand">Les NGANYIRA</div>
     <nav class="nav-right">
-      <a href="home.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="contribute.html">Make a Contribution</a>
-      <a href="terms.html">Terms & Policies</a>
-      <button id="logoutBtn" class="nav-btn">Log out</button>
+      <a href="home.html" data-i18n="nav.home">Ahabanza</a>
+      <a href="about.html" data-i18n="nav.about">Ibyerekeye</a>
+      <a href="services.html" data-i18n="nav.services">Serivisi</a>
+      <a href="contribute.html" data-i18n="nav.contribute">Tanga umusanzu</a>
+      <a href="terms.html" data-i18n="nav.terms">Amategeko & Politiki</a>
+      <select id="langSel" class="lang-select" title="Language">
+        <option value="rw">Kinyarwanda</option>
+        <option value="en">English</option>
+        <option value="fr">Français</option>
+      </select>
+      <button id="logoutBtn" class="nav-btn" data-i18n="nav.logout">Sohoka</button>
     </nav>
   </header>
 
-  <div class="auth-card" style="margin-top:24px;">
-    <h1>Make a Contribution</h1>
-    <p>Enter your contribution amount and currency. We’ll convert it to <b>CAD</b> automatically (demo rates below).</p>
+  <div class="auth-card" style="margin-top:16px;">
+    <h1 data-i18n="page.h1">Tanga umusanzu</h1>
+    <p class="muted" data-i18n="page.lead">Shyiramo umubare n’ifaranga; tuzahita duhinduza mu CAD tukabika.</p>
 
-    <!-- FORM -->
-    <form id="contribForm">
-      <label>Amount</label>
-      <input type="number" id="amount" min="0" step="0.01" placeholder="e.g. 50" required/>
+    <div class="grid">
+      <!-- Form -->
+      <div class="card">
+        <div id="okMsg" class="success" role="status" aria-live="polite" data-i18n="form.ok">Byacungiwe neza!</div>
 
-      <label>Currency</label>
-      <select id="currency" required>
-        <option value="CAD" selected>CAD — Canadian Dollar</option>
-        <option value="USD">USD — US Dollar</option>
-        <option value="EUR">EUR — Euro</option>
-        <option value="GBP">GBP — British Pound</option>
-        <option value="RWF">RWF — Rwandan Franc</option>
-      </select>
+        <div class="row">
+          <div style="flex:1 1 180px; min-width:220px;">
+            <label for="amount" data-i18n="form.amount">Umubare</label>
+            <input id="amount" type="number" inputmode="decimal" placeholder="0.00" step="0.01" />
+          </div>
+          <div style="flex:1 1 140px; min-width:180px;">
+            <label for="currency" data-i18n="form.currency">Ifaranga</label>
+            <select id="currency">
+              <option value="CAD">CAD</option>
+              <option value="USD">USD</option>
+              <option value="EUR">EUR</option>
+              <option value="GBP">GBP</option>
+              <option value="RWF">RWF</option>
+            </select>
+          </div>
+        </div>
 
-      <label>Note (optional)</label>
-      <input type="text" id="note" placeholder="e.g. Family fund"/>
+        <div class="row" style="margin-top:10px;">
+          <div style="flex:1 1 220px;">
+            <label for="note" data-i18n="form.note">Icyo byagenewe / Icyitonderwa</label>
+            <textarea id="note" rows="3" placeholder="(Optional)"></textarea>
+          </div>
+        </div>
 
-      <div id="preview" class="muted" style="margin-top:8px;"></div>
+        <div style="margin-top:10px;">
+          <div class="muted"><small data-i18n="form.preview">Igaragaza uko bihinduka:</small></div>
+          <div id="preview" class="card" style="padding:10px; border-radius:10px; border:1px dashed #d8deea;">
+            — 
+          </div>
+        </div>
 
-      <button type="submit" style="margin-top:10px;">Save contribution</button>
-      <p id="msg" class="success"></p>
-      <p class="muted" style="margin-top:6px;">
-        <small>Rates are demo and set locally on this page (see “Exchange Rates → CAD” below).</small>
-      </p>
-    </form>
+        <div class="row" style="margin-top:12px;">
+          <button class="btn" id="saveBtn" data-i18n="form.save">Bika umusanzu</button>
+          <a href="home.html" class="btn secondary" data-i18n="form.backHome">Subira ku Ahabanza</a>
+        </div>
 
-    <hr style="margin:16px 0; border:0; height:1px; background:#eef1f7;"/>
+        <div class="muted" style="margin-top:8px;">
+          <small data-i18n="form.ratesHint">Ingero z'ibiciro by'ivunjisha by'ubu: birashobora guhinduka.</small>
+        </div>
+      </div>
 
-    <!-- LIST -->
-    <h2>Your saved contributions (this device)</h2>
-    <div id="listWrap" class="muted">No contributions yet.</div>
-
-    <hr style="margin:16px 0; border:0; height:1px; background:#eef1f7;"/>
-
-    <!-- RATES -->
-    <h2>Exchange Rates → CAD</h2>
-    <p class="muted" id="ratesUpdated">Last updated: <b>set manually in code</b></p>
-    <div id="ratesTable"></div>
+      <!-- Recent list -->
+      <div class="card">
+        <h2 data-i18n="list.title">Ibyinjijwe byawe</h2>
+        <div id="recentList" class="muted">—</div>
+      </div>
+    </div>
   </div>
 
+  <footer style="max-width:1100px;margin:16px auto 8px;padding:12px;background:#fff;border:1px solid #eef1f7;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.04);">
+    <div style="display:flex;flex-wrap:wrap;gap:12px;align-items:center;justify-content:space-between;">
+      <div class="muted">
+        <b data-i18n="footer.brand">Umuryango Les NGANYIRA</b> · <span data-i18n="footer.where">Kigali n’ahandi hose</span>
+        <br/><small><span data-i18n="footer.email">Email</span>: example@lesnganyira.org · <span data-i18n="footer.phone">Tel</span>: +250 7xx xxx xxx</small>
+      </div>
+      <div>
+        <a href="terms.html" class="btn secondary" style="padding:8px 10px;" data-i18n="footer.terms">Amategeko & Politiki</a>
+        <a href="contribute.html" class="btn" style="padding:8px 10px;" data-i18n="footer.contribute">Tanga umusanzu</a>
+      </div>
+    </div>
+  </footer>
+
   <script>
-    // ----- Auth guard -----
+    // ===== Auth guard =====
     const email = localStorage.getItem("lng_current_user");
     if (!email) { window.location.href = "index.html"; }
     document.getElementById("logoutBtn").addEventListener("click", () => {
@@ -73,106 +119,186 @@
       window.location.href = "index.html";
     });
 
-    // ----- Local demo FX rates → 1 unit of CURRENCY equals X CAD -----
-    // Update these numbers + lastUpdated text when you want fresher rates.
-    const exchangeRates = {
-      CAD: 1,        // 1 CAD = 1 CAD
-      USD: 1.35,     // 1 USD ≈ 1.35 CAD (demo)
-      EUR: 1.48,     // 1 EUR ≈ 1.48 CAD (demo)
-      GBP: 1.74,     // 1 GBP ≈ 1.74 CAD (demo)
-      RWF: 0.0011    // 1 RWF ≈ 0.0011 CAD (demo)
+    // ===== Helpers & storage =====
+    function getContribs(){ try { return JSON.parse(localStorage.getItem("lng_contribs")||"{}"); } catch { return {}; } }
+    function setContribs(db){ localStorage.setItem("lng_contribs", JSON.stringify(db)); }
+    function fmtMoney(n){ return new Intl.NumberFormat(undefined,{minimumFractionDigits:2,maximumFractionDigits:2}).format(n); }
+
+    // ===== Exchange rates (example static) → CAD =====
+    // Hindura hano niba ushaka kuvanaho/kuvugurura intoki
+    const RATES_TO_CAD = {
+      CAD: 1,
+      USD: 1.34, // 1 USD ≈ 1.34 CAD (sample)
+      EUR: 1.45, // 1 EUR ≈ 1.45 CAD (sample)
+      GBP: 1.70, // 1 GBP ≈ 1.70 CAD (sample)
+      RWF: 0.0011 // 1 RWF ≈ 0.0011 CAD (sample)
     };
-    const lastUpdated = "2025-08-11"; // <-- Hindura iyi itariki igihe uhinduye rates
 
-    // ----- Helpers for localStorage -----
-    function getContribs(){
-      try { return JSON.parse(localStorage.getItem("lng_contribs")||"{}"); } catch { return {}; }
-    }
-    function setContribs(o){
-      localStorage.setItem("lng_contribs", JSON.stringify(o));
-    }
-
-    // ----- UI elements -----
     const amountEl = document.getElementById("amount");
     const currencyEl = document.getElementById("currency");
     const noteEl = document.getElementById("note");
     const previewEl = document.getElementById("preview");
-    const msgEl = document.getElementById("msg");
-    const listWrap = document.getElementById("listWrap");
-    const ratesTable = document.getElementById("ratesTable");
-    const ratesUpdated = document.getElementById("ratesUpdated");
+    const okMsg = document.getElementById("okMsg");
 
-    // Show rates table
-    function renderRates() {
-      ratesUpdated.innerHTML = `Last updated: <b>${lastUpdated}</b>`;
-      const entries = Object.entries(exchangeRates);
-      let html = '<div style="overflow:auto;"><table style="width:100%; border-collapse:collapse;">';
-      html += '<thead><tr>' +
-              '<th style="text-align:left; padding:8px; border-bottom:1px solid #eef1f7;">Currency</th>' +
-              '<th style="text-align:left; padding:8px; border-bottom:1px solid #eef1f7;">1 unit equals (CAD)</th>' +
-              '</tr></thead><tbody>';
-      entries.forEach(([ccy, rate]) => {
-        html += `<tr>
-          <td style="padding:8px; border-bottom:1px solid #f2f4f8;">${ccy}</td>
-          <td style="padding:8px; border-bottom:1px solid #f2f4f8;">${Number(rate).toFixed(4)} CAD</td>
-        </tr>`;
-      });
-      html += '</tbody></table></div>';
-      ratesTable.innerHTML = html;
-    }
-
-    // Live preview of conversion
-    function updatePreview() {
-      const amt = parseFloat(amountEl.value);
+    function renderPreview(){
+      const amt = parseFloat(amountEl.value || "0");
       const cur = currencyEl.value;
-      if (!amt || !exchangeRates[cur]) {
-        previewEl.textContent = "";
-        return;
-      }
-      const cad = amt * exchangeRates[cur];
-      previewEl.textContent = `≈ ${cad.toFixed(2)} CAD (from ${amt} ${cur})`;
+      if (!amt || amt <= 0) { previewEl.textContent = "—"; return; }
+      const rate = RATES_TO_CAD[cur] || 1;
+      const cad = amt * rate;
+      previewEl.textContent = `${fmtMoney(amt)} ${cur}  →  ${fmtMoney(cad)} CAD`;
     }
-    amountEl.addEventListener("input", updatePreview);
-    currencyEl.addEventListener("change", updatePreview);
+    amountEl.addEventListener("input", renderPreview);
+    currencyEl.addEventListener("change", renderPreview);
 
-    // Submit handler
-    document.getElementById("contribForm").addEventListener("submit", (e)=>{
-      e.preventDefault();
-      msgEl.textContent = "";
-
-      const amt = parseFloat(amountEl.value);
+    // Save contribution
+    document.getElementById("saveBtn").addEventListener("click", () => {
+      const amt = parseFloat(amountEl.value || "0");
       const cur = currencyEl.value;
-      if (!amt || amt <= 0) { msgEl.textContent = "Enter a valid amount."; return; }
-      if (!exchangeRates[cur]) { msgEl.textContent = "Unsupported currency."; return; }
+      if (!amt || amt <= 0) { amountEl.focus(); return; }
+      const cad = (RATES_TO_CAD[cur] || 1) * amt;
 
-      const cadAmount = amt * exchangeRates[cur];
-      const note = (noteEl.value || "").trim();
-
-      // Save per user
       const db = getContribs();
-      if (!db[email]) db[email] = [];
+      db[email] = db[email] || [];
       db[email].push({
         amountOriginal: amt,
         currency: cur,
-        amountCAD: parseFloat(cadAmount.toFixed(2)),
-        note,
+        amountCAD: cad,
+        note: (noteEl.value || "").trim(),
         at: Date.now()
       });
       setContribs(db);
 
-      msgEl.textContent = "Saved locally (converted to CAD).";
-      e.target.reset();
-      previewEl.textContent = "";
+      okMsg.style.display = "block";
+      renderPreview();
       renderList();
+      amountEl.value = "";
+      noteEl.value = "";
+      setTimeout(()=> okMsg.style.display = "none", 1800);
     });
 
-    // Render list
-    function renderList() {
+    // Recent list
+    function renderList(){
       const db = getContribs();
-      const rows = (db[email]||[]).slice().reverse(); // newest first
-      if (!rows.length) { listWrap.textContent = "No contributions yet."; return; }
+      const rows = (db[email] || []).slice().reverse();
+      const box = document.getElementById("recentList");
+      if (!rows.length) {
+        box.innerHTML = `<span data-i18n="list.empty">${TR[langSel.value]["list.empty"]}</span>`;
+        return;
+      }
+      let html = '<div style="overflow:auto;"><table class="simple">';
+      html += `<thead><tr>
+          <th>${TR[langSel.value]["tbl.date"]}</th>
+          <th>${TR[langSel.value]["tbl.original"]}</th>
+          <th>${TR[langSel.value]["tbl.cad"]}</th>
+          <th>${TR[langSel.value]["tbl.note"]}</th>
+        </tr></thead><tbody>`;
+      rows.slice(0,10).forEach(r=>{
+        const d = new Date(r.at).toLocaleString();
+        html += `<tr>
+          <td>${d}</td>
+          <td>${fmtMoney(r.amountOriginal)} ${r.currency}</td>
+          <td>${fmtMoney(r.amountCAD)} CAD</td>
+          <td>${r.note || ""}</td>
+        </tr>`;
+      });
+      html += '</tbody></table></div>';
+      box.innerHTML = html;
+    }
 
-      const fmt = (n)=> new Intl.NumberFormat(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }).format(n);
+    // ===== i18n (RW/EN/FR) =====
+    const TR = {
+      rw: {
+        brand:"Les NGANYIRA",
+        title:"Les NGANYIRA — Tanga umusanzu",
+        "nav.home":"Ahabanza","nav.about":"Ibyerekeye","nav.services":"Serivisi","nav.contribute":"Tanga umusanzu","nav.terms":"Amategeko & Politiki","nav.logout":"Sohoka",
+        "page.h1":"Tanga umusanzu",
+        "page.lead":"Shyiramo umubare n’ifaranga; tuzahita duhinduza mu CAD tukabika.",
+        "form.ok":"Byacungiwe neza!",
+        "form.amount":"Umubare",
+        "form.currency":"Ifaranga",
+        "form.note":"Icyo byagenewe / Icyitonderwa",
+        "form.preview":"Igaragaza uko bihinduka:",
+        "form.save":"Bika umusanzu",
+        "form.backHome":"Subira ku Ahabanza",
+        "form.ratesHint":"Ingero z'ibiciro by'ivunjisha by'ubu: birashobora guhinduka.",
+        "list.title":"Ibyinjijwe byawe",
+        "list.empty":"Nta musanzu urabikwa.",
+        "tbl.date":"Itariki",
+        "tbl.original":"Byatangirijweho",
+        "tbl.cad":"Mu CAD",
+        "tbl.note":"Ibisobanuro",
+        "footer.brand":"Umuryango Les NGANYIRA","footer.where":"Kigali n’ahandi hose","footer.email":"Email","footer.phone":"Tel","footer.terms":"Amategeko & Politiki","footer.contribute":"Tanga umusanzu"
+      },
+      en: {
+        brand:"Les NGANYIRA",
+        title:"Les NGANYIRA — Make a Contribution",
+        "nav.home":"Home","nav.about":"About","nav.services":"Services","nav.contribute":"Make a Contribution","nav.terms":"Terms & Policies","nav.logout":"Log out",
+        "page.h1":"Make a Contribution",
+        "page.lead":"Enter an amount and currency; we convert to CAD and save it.",
+        "form.ok":"Saved successfully!",
+        "form.amount":"Amount",
+        "form.currency":"Currency",
+        "form.note":"Purpose / Note",
+        "form.preview":"Conversion preview:",
+        "form.save":"Save contribution",
+        "form.backHome":"Back to Home",
+        "form.ratesHint":"Sample exchange rates for now; they may change.",
+        "list.title":"Your contributions",
+        "list.empty":"No contributions yet.",
+        "tbl.date":"Date",
+        "tbl.original":"Original",
+        "tbl.cad":"In CAD",
+        "tbl.note":"Note",
+        "footer.brand":"Les NGANYIRA Family","footer.where":"Kigali & worldwide","footer.email":"Email","footer.phone":"Phone","footer.terms":"Terms & Policies","footer.contribute":"Contribute"
+      },
+      fr: {
+        brand:"Les NGANYIRA",
+        title:"Les NGANYIRA — Faire une contribution",
+        "nav.home":"Accueil","nav.about":"À propos","nav.services":"Services","nav.contribute":"Faire une contribution","nav.terms":"Conditions & Politiques","nav.logout":"Déconnexion",
+        "page.h1":"Faire une contribution",
+        "page.lead":"Saisissez un montant et une devise ; nous convertissons en CAD et l’enregistrons.",
+        "form.ok":"Enregistré avec succès !",
+        "form.amount":"Montant",
+        "form.currency":"Devise",
+        "form.note":"Objet / Note",
+        "form.preview":"Aperçu de conversion :",
+        "form.save":"Enregistrer la contribution",
+        "form.backHome":"Retour à l’accueil",
+        "form.ratesHint":"Taux de change d’exemple ; susceptibles d’évoluer.",
+        "list.title":"Vos contributions",
+        "list.empty":"Aucune contribution pour l’instant.",
+        "tbl.date":"Date",
+        "tbl.original":"Original",
+        "tbl.cad":"En CAD",
+        "tbl.note":"Note",
+        "footer.brand":"Famille Les NGANYIRA","footer.where":"Kigali & dans le monde","footer.email":"Email","footer.phone":"Tél.","footer.terms":"Conditions & Politiques","footer.contribute":"Contribuer"
+      }
+    };
 
-      let html = '<div style="overflow:auto;"><table style="width:100%; border-collapse:collapse;">';
-      html += '
+    function applyLang(lang){
+      const dict = TR[lang] || TR.rw;
+      document.querySelectorAll("[data-i18n]").forEach(el=>{
+        const key = el.getAttribute("data-i18n");
+        if (dict[key]) el.textContent = dict[key];
+      });
+      document.title = dict["title"] || "Les NGANYIRA — Contribution";
+      document.documentElement.setAttribute("lang", lang);
+      localStorage.setItem("lng_lang", lang);
+      // refresh dynamic list headers/placeholders
+      renderPreview();
+      renderList();
+    }
+
+    const langSel = document.getElementById("langSel");
+    const savedLang = localStorage.getItem("lng_lang") || "rw";
+    langSel.value = savedLang;
+    langSel.addEventListener("change", ()=> applyLang(langSel.value));
+    applyLang(savedLang);
+
+    // Initial render
+    renderPreview();
+    renderList();
+  </script>
+</body>
+</html>
