--- a/contribute.html
+++ b/contribute.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css"/>
   <style>
     .lang-select { padding:8px 10px; border-radius:8px; border:1px solid #d8deea; background:#fff; }
-    .grid { display:grid; gap:12px; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); }
+    .grid { display:grid; gap:12px; grid-template-columns: repeat(auto-fit,minmax(260px,1fr)); }
     .card { background:#fff; border:1px solid #eef1f7; border-radius:14px; padding:14px; }
     .row { display:flex; gap:10px; flex-wrap:wrap; }
     label { display:block; font-weight:600; margin-bottom:6px; }
@@ -18,6 +18,10 @@
     table.simple th, table.simple td { padding:8px; border-bottom:1px solid #eef1f7; text-align:left; }
     .btn { padding:10px 12px; border-radius:10px; background: var(--accent); color:#fff; text-decoration:none; font-weight:600; border:0; cursor:pointer; }
     .btn.secondary { background:#eef3ff; color:#1f3fb3; }
+    .kpi-grid { display:grid; gap:10px; grid-template-columns: repeat(auto-fit,minmax(180px,1fr)); }
+    .kpi { background:#fff; border:1px solid #eef1f7; border-radius:12px; padding:12px; }
+    .kpi .lbl { font-size:12px; color:#6b7280; }
+    .kpi .val { font-size:18px; font-weight:700; }
   </style>
 </head>
 <body>
@@ -41,7 +45,7 @@
 
   <div class="auth-card" style="margin-top:16px;">
     <h1 data-i18n="page.h1">Tanga umusanzu</h1>
-    <p class="muted" data-i18n="page.lead">Shyiramo umubare n’ifaranga; tuzahita duhinduza mu CAD tukabika.</p>
+    <p class="muted" data-i18n="page.lead">Hitamo fund, shyiramo umubare n’ifaranga; tuzahita duhinduza mu CAD tukabika ku fund wahisemo.</p>
 
     <div class="grid">
       <!-- Form -->
@@ -49,11 +53,22 @@
         <div id="okMsg" class="success" role="status" aria-live="polite" data-i18n="form.ok">Byacungiwe neza!</div>
 
         <div class="row">
-          <div style="flex:1 1 180px; min-width:220px;">
+          <div style="flex:1 1 220px; min-width:220px;">
+            <label for="fund" data-i18n="form.fund">Fund</label>
+            <select id="fund">
+              <option value="savings" data-i18n="fund.savings">Kwigomwa & Kuzigamira</option>
+              <option value="emergency" data-i18n="fund.emergency">Inkunga y’ihutirwa</option>
+              <option value="education" data-i18n="fund.education">Fonds y’Uburezi</option>
+              <option value="health" data-i18n="fund.health">Inkunga y’Ubuvuzi</option>
+              <option value="events" data-i18n="fund.events">Inkunga y’ibirori</option>
+              <option value="projects" data-i18n="fund.projects">Imishinga y’iterambere</option>
+            </select>
+          </div>
+          <div style="flex:1 1 180px; min-width:180px;">
             <label for="amount" data-i18n="form.amount">Umubare</label>
             <input id="amount" type="number" inputmode="decimal" placeholder="0.00" step="0.01" />
           </div>
-          <div style="flex:1 1 140px; min-width:180px;">
+          <div style="flex:1 1 140px; min-width:160px;">
             <label for="currency" data-i18n="form.currency">Ifaranga</label>
             <select id="currency">
               <option value="CAD">CAD</option>
@@ -74,9 +89,7 @@
 
         <div style="margin-top:10px;">
           <div class="muted"><small data-i18n="form.preview">Igaragaza uko bihinduka:</small></div>
-          <div id="preview" class="card" style="padding:10px; border-radius:10px; border:1px dashed #d8deea;">
-            — 
-          </div>
+          <div id="preview" class="card" style="padding:10px; border-radius:10px; border:1px dashed #d8deea;">—</div>
         </div>
 
         <div class="row" style="margin-top:12px;">
@@ -89,8 +102,16 @@
         </div>
       </div>
 
-      <!-- Recent list -->
+      <!-- Per-fund subtotals -->
       <div class="card">
+        <h2 data-i18n="totals.title">Subtotals kuri buri fund (CAD)</h2>
+        <div class="kpi-grid" id="fundTotals">
+          <!-- JS will inject cards per fund -->
+        </div>
+      </div>
+
+      <!-- Recent list -->
+      <div class="card" style="grid-column: 1 / -1;">
         <h2 data-i18n="list.title">Ibyinjijwe byawe</h2>
         <div id="recentList" class="muted">—</div>
       </div>
@@ -124,43 +145,40 @@
     function setContribs(db){ localStorage.setItem("lng_contribs", JSON.stringify(db)); }
     function fmtMoney(n){ return new Intl.NumberFormat(undefined,{minimumFractionDigits:2,maximumFractionDigits:2}).format(n); }
 
-    // ===== Exchange rates (example static) → CAD =====
-    // Hindura hano niba ushaka kuvanaho/kuvugurura intoki
-    const RATES_TO_CAD = {
-      CAD: 1,
-      USD: 1.34, // 1 USD ≈ 1.34 CAD (sample)
-      EUR: 1.45, // 1 EUR ≈ 1.45 CAD (sample)
-      GBP: 1.70, // 1 GBP ≈ 1.70 CAD (sample)
-      RWF: 0.0011 // 1 RWF ≈ 0.0011 CAD (sample)
-    };
+    // Exchange rates → CAD (samples)
+    const RATES_TO_CAD = { CAD:1, USD:1.34, EUR:1.45, GBP:1.70, RWF:0.0011 };
 
     const amountEl = document.getElementById("amount");
     const currencyEl = document.getElementById("currency");
     const noteEl = document.getElementById("note");
+    const fundEl = document.getElementById("fund");
     const previewEl = document.getElementById("preview");
     const okMsg = document.getElementById("okMsg");
 
     function renderPreview(){
       const amt = parseFloat(amountEl.value || "0");
       const cur = currencyEl.value;
+      const fund = labelOfFund(fundEl.value);
       if (!amt || amt <= 0) { previewEl.textContent = "—"; return; }
-      const rate = RATES_TO_CAD[cur] || 1;
-      const cad = amt * rate;
-      previewEl.textContent = `${fmtMoney(amt)} ${cur}  →  ${fmtMoney(cad)} CAD`;
+      const cad = amt * (RATES_TO_CAD[cur] || 1);
+      previewEl.textContent = `${fund}: ${fmtMoney(amt)} ${cur}  →  ${fmtMoney(cad)} CAD`;
     }
     amountEl.addEventListener("input", renderPreview);
     currencyEl.addEventListener("change", renderPreview);
+    fundEl.addEventListener("change", renderPreview);
 
     // Save contribution
     document.getElementById("saveBtn").addEventListener("click", () => {
       const amt = parseFloat(amountEl.value || "0");
       const cur = currencyEl.value;
+      const fund = fundEl.value;
       if (!amt || amt <= 0) { amountEl.focus(); return; }
       const cad = (RATES_TO_CAD[cur] || 1) * amt;
 
       const db = getContribs();
       db[email] = db[email] || [];
       db[email].push({
+        fund,                    // <— twongeyemo fund
         amountOriginal: amt,
         currency: cur,
         amountCAD: cad,
@@ -172,31 +190,62 @@
       okMsg.style.display = "block";
       renderPreview();
       renderList();
+      renderFundTotals();
       amountEl.value = "";
       noteEl.value = "";
       setTimeout(()=> okMsg.style.display = "none", 1800);
     });
+
+    // Per-fund totals
+    const FUNDS = ["savings","emergency","education","health","events","projects"];
+    function labelOfFund(code){
+      const L = TR[langSel.value];
+      const map = {
+        savings: L["fund.savings"],
+        emergency: L["fund.emergency"],
+        education: L["fund.education"],
+        health: L["fund.health"],
+        events: L["fund.events"],
+        projects: L["fund.projects"]
+      };
+      return map[code] || code;
+    }
+
+    function renderFundTotals(){
+      const db = getContribs(); const rows = (db[email]||[]);
+      const totals = FUNDS.reduce((o,k)=> (o[k]=0, o), {});
+      rows.forEach(r => { totals[r.fund||"savings"] += Number(r.amountCAD)||0; });
+      const wrap = document.getElementById("fundTotals");
+      let html = "";
+      FUNDS.forEach(k=>{
+        html += `<div class="kpi">
+          <div class="lbl">${labelOfFund(k)}</div>
+          <div class="val">${fmtMoney(totals[k])} CAD</div>
+        </div>`;
+      });
+      wrap.innerHTML = html;
+    }
 
     // Recent list
     function renderList(){
       const db = getContribs();
       const rows = (db[email] || []).slice().reverse();
       const box = document.getElementById("recentList");
-      if (!rows.length) {
-        box.innerHTML = `<span data-i18n="list.empty">${TR[langSel.value]["list.empty"]}</span>`;
-        return;
-      }
+      const L = TR[langSel.value];
+      if (!rows.length) { box.textContent = L["list.empty"]; return; }
       let html = '<div style="overflow:auto;"><table class="simple">';
       html += `<thead><tr>
-          <th>${TR[langSel.value]["tbl.date"]}</th>
-          <th>${TR[langSel.value]["tbl.original"]}</th>
-          <th>${TR[langSel.value]["tbl.cad"]}</th>
-          <th>${TR[langSel.value]["tbl.note"]}</th>
+          <th>${L["tbl.date"]}</th>
+          <th>${L["tbl.fund"]}</th>
+          <th>${L["tbl.original"]}</th>
+          <th>${L["tbl.cad"]}</th>
+          <th>${L["tbl.note"]}</th>
         </tr></thead><tbody>`;
-      rows.slice(0,10).forEach(r=>{
+      rows.slice(0,12).forEach(r=>{
         const d = new Date(r.at).toLocaleString();
         html += `<tr>
           <td>${d}</td>
+          <td>${labelOfFund(r.fund||"savings")}</td>
           <td>${fmtMoney(r.amountOriginal)} ${r.currency}</td>
           <td>${fmtMoney(r.amountCAD)} CAD</td>
           <td>${r.note || ""}</td>
@@ -213,8 +262,15 @@
         title:"Les NGANYIRA — Tanga umusanzu",
         "nav.home":"Ahabanza","nav.about":"Ibyerekeye","nav.services":"Serivisi","nav.contribute":"Tanga umusanzu","nav.terms":"Amategeko & Politiki","nav.logout":"Sohoka",
         "page.h1":"Tanga umusanzu",
-        "page.lead":"Shyiramo umubare n’ifaranga; tuzahita duhinduza mu CAD tukabika.",
+        "page.lead":"Hitamo fund, shyiramo umubare n’ifaranga; tuzahita duhinduza mu CAD tukabika ku fund wahisemo.",
         "form.ok":"Byacungiwe neza!",
+        "form.fund":"Fund",
+        "fund.savings":"Kwigomwa & Kuzigamira",
+        "fund.emergency":"Inkunga y’ihutirwa",
+        "fund.education":"Fonds y’Uburezi",
+        "fund.health":"Inkunga y’Ubuvuzi",
+        "fund.events":"Inkunga y’ibirori",
+        "fund.projects":"Imishinga y’iterambere",
         "form.amount":"Umubare",
         "form.currency":"Ifaranga",
         "form.note":"Icyo byagenewe / Icyitonderwa",
@@ -222,9 +278,11 @@
         "form.save":"Bika umusanzu",
         "form.backHome":"Subira ku Ahabanza",
         "form.ratesHint":"Ingero z'ibiciro by'ivunjisha by'ubu: birashobora guhinduka.",
+        "totals.title":"Subtotals kuri buri fund (CAD)",
         "list.title":"Ibyinjijwe byawe",
         "list.empty":"Nta musanzu urabikwa.",
         "tbl.date":"Itariki",
+        "tbl.fund":"Fund",
         "tbl.original":"Byatangirijweho",
         "tbl.cad":"Mu CAD",
         "tbl.note":"Ibisobanuro",
@@ -235,18 +293,27 @@
         title:"Les NGANYIRA — Make a Contribution",
         "nav.home":"Home","nav.about":"About","nav.services":"Services","nav.contribute":"Make a Contribution","nav.terms":"Terms & Policies","nav.logout":"Log out",
         "page.h1":"Make a Contribution",
-        "page.lead":"Enter an amount and currency; we convert to CAD and save it.",
+        "page.lead":"Choose a fund, enter amount and currency; we convert to CAD and save to that fund.",
         "form.ok":"Saved successfully!",
+        "form.fund":"Fund",
+        "fund.savings":"Saving & Contributions",
+        "fund.emergency":"Emergency Support",
+        "fund.education":"Education Fund",
+        "fund.health":"Health Support",
+        "fund.events":"Events Support",
+        "fund.projects":"Development Projects",
         "form.amount":"Amount",
         "form.currency":"Currency",
         "form.note":"Purpose / Note",
         "form.preview":"Conversion preview:",
         "form.save":"Save contribution",
         "form.backHome":"Back to Home",
-        "form.ratesHint":"Sample exchange rates for now; they may change.",
+        "form.ratesHint":"Sample exchange rates; may change.",
+        "totals.title":"Per-fund subtotals (CAD)",
         "list.title":"Your contributions",
         "list.empty":"No contributions yet.",
         "tbl.date":"Date",
+        "tbl.fund":"Fund",
         "tbl.original":"Original",
         "tbl.cad":"In CAD",
         "tbl.note":"Note",
@@ -257,18 +324,27 @@
         title:"Les NGANYIRA — Faire une contribution",
         "nav.home":"Accueil","nav.about":"À propos","nav.services":"Services","nav.contribute":"Faire une contribution","nav.terms":"Conditions & Politiques","nav.logout":"Déconnexion",
         "page.h1":"Faire une contribution",
-        "page.lead":"Saisissez un montant et une devise ; nous convertissons en CAD et l’enregistrons.",
+        "page.lead":"Choisissez un fonds, saisissez le montant et la devise ; nous convertissons en CAD et l’enregistrons dans ce fonds.",
         "form.ok":"Enregistré avec succès !",
+        "form.fund":"Fonds",
+        "fund.savings":"Épargne & Contributions",
+        "fund.emergency":"Soutien d’urgence",
+        "fund.education":"Fonds Éducation",
+        "fund.health":"Soutien Santé",
+        "fund.events":"Soutien Événements",
+        "fund.projects":"Projets de développement",
         "form.amount":"Montant",
         "form.currency":"Devise",
         "form.note":"Objet / Note",
         "form.preview":"Aperçu de conversion :",
-        "form.save":"Enregistrer la contribution",
+        "form.save":"Enregistrer",
         "form.backHome":"Retour à l’accueil",
         "form.ratesHint":"Taux de change d’exemple ; susceptibles d’évoluer.",
+        "totals.title":"Sous-totaux par fonds (CAD)",
         "list.title":"Vos contributions",
-        "list.empty":"Aucune contribution pour l’instant.",
+        "list.empty":"Aucune contribution.",
         "tbl.date":"Date",
+        "tbl.fund":"Fonds",
         "tbl.original":"Original",
         "tbl.cad":"En CAD",
         "tbl.note":"Note",
@@ -285,9 +361,9 @@
       document.title = dict["title"] || "Les NGANYIRA — Contribution";
       document.documentElement.setAttribute("lang", lang);
       localStorage.setItem("lng_lang", lang);
-      // refresh dynamic list headers/placeholders
       renderPreview();
       renderList();
+      renderFundTotals();
     }
 
     const langSel = document.getElementById("langSel");
@@ -299,6 +375,7 @@
     // Initial render
     renderPreview();
     renderList();
+    renderFundTotals();
   </script>
 </body>
 </html>
